--- a/my-app/src/Sample.css
+++ b/my-app/src/Sample.css
@@ -1,28 +1,28 @@
-.App {
+.Sample {
   text-align: center;
 }
 
-.App-logo {
+.Sample-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
 
-.App-header {
+.Sample-header {
   background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
 }
 
-.App-title {
+.Sample-title {
   font-size: 1.5em;
 }
 
-.App-intro {
+.Sample-intro {
   font-size: large;
 }
 
-@keyframes App-logo-spin {
+@keyframes Sample-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
